# tifuun-sensitivity

./: .coveragerc  .gitignore  .gitignore.swp  LICENSE  README.md  pyproject.toml
docs/: build  conf.py
ipynb/: Basics of running tifuun-sensitivity.ipynb  tutorial.ipynb
tests/: test_atmosphere.py  test_cascade.py  test_filterbank.py  test_physics.py  test_simulator.py
tifuun_sensitivity/: __init__.py  atmosphere.py  cascade.py  filterbank.py  instruments.py  physics.py  simulator.py
tifuun_sensitivity/data/: DESHIMA2.py  QOfilterstack.npy
