[tool.poetry]
name = "tifuun-sensitivity"
version = "0.1.7"
description = "Sensitivity calculator for TIFUUN"
authors = [
    "Arend Moerman <a.moerman-1@tudelft.nl>",
    "Akira Endo <a.endo@tudelft.nl>",
    "Akio Taniguchi <taniguchi.akio@gmail.com>",
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.14"
matplotlib = ">=3.8"
numpy = ">=1.26"
scipy = ">=1.13"
pandas = ">=2.2"
jupyter-io = ">=1.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10"
ipython = "^8.30"
myst-parser = "^4.0"
notebook = "^7.3"
pydata-sphinx-theme = "^0.16"
nose2 = "^0.15.1"
sphinx = "^8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
